@@ -46,6 +46,7 @@ Bug fixes
  * ``pageurl`` and ``slugurl`` tags no longer fail when ``request.site`` is ``None`` (Samir Shah)
  * Output form media on add/edit image forms with custom models (Matt Westcott)
  * Fixes layout for the clear checkbox in default FileField widget (Mikalai Radchuk)
+ * Remove ASCII conversion from Postgres search backend, to support stemming in non-Latin alphabets (Pavel Denisov)
 
 
 Upgrade considerations
